@@ -1,3 +1,7 @@
+2009-05-29  Ian Lance Taylor  <iant@google.com>
+
+	* error.c (cp_printer): Don't use va_arg with enum type.
+
 2009-05-28  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/39754
